package Channel_P;

message channel_chatting
{
	required byte  size		= 1;
	required byte  type		= 1;
	required int32 id		= 1;
	required int32 target	= 2;
	required string message = 3;
}